--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en" prefix='og: http://ogp.me/ns#'>
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Foundation | Welcome</title>
+    <title>Впомощьменедже.ру</title>
 
 
     <script src="static/js/modernizr.js"></script>
@@ -24,6 +24,41 @@
     <link rel="stylesheet" href="static/css/app.css"/>
 
 
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/static/img/fav/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/static/img/fav/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/static/img/fav/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/static/img/fav/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/static/img/fav/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/static/img/fav/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/static/img/fav/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/static/img/fav/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/img/fav/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="/static/img/fav/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/static/img/fav/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="/static/img/fav/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/static/img/fav/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/static/img/fav/manifest.json">
+    <link rel="shortcut icon" href="/static/img/fav/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileImage" content="/static/img/fav/mstile-144x144.png">
+    <meta name="msapplication-config" content="/static/img/fav/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
+    <meta property="og:title" content="Впомощьменедже.ру" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://vpomoshchmanage.ru/" />
+    <meta property="og:image" content="http://vpomoshchmanage.ru/static/img/m.jpg" />
+    <meta property="og:description" content="Создаем сервисы, которые помогут digital менеджерам" />
+    <meta property="og:site_name" content="Впомощьменедже.ру" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@khabaroff">
+    <meta name="twitter:creator" content="@khabaroff">
+    <meta name="twitter:title" content="Впомощьменедже.ру">
+    <meta name="twitter:description" content="Создаем сервисы, которые помогут digital менеджерам">
+    <meta name="twitter:image:src" content="http://vpomoshchmanage.ru/static/img/m.jpg">
+
+
 </head>
 <body>
 
@@ -42,7 +77,8 @@
     </video>
 
 
-        <button class="md-trigger" data-modal="modal-1">Newspaper</button>
+        <button style="display: none" class="md-trigger"
+                data-modal="modal-1">            Newspaper</button>
 
         <div class="md-modal md-effect-1" id="modal-1">
             <div class="md-content">
